// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setupReplayConfig should add Replay configurations correctly for CommonJS syntax 1`] = `
"
const { defineConfig, devices } = require('@playwright/test');

const replayDevices = require('@replayio/playwright').devices;

module.exports = defineConfig({
  testDir: './tests',

  /* Run tests in files in parallel */
  fullyParallel: true,

  /* Fail the build on CI if you accidentally left test.only in the source code. */
  forbidOnly: !!process.env.CI,

  /* Retry on CI only */
  retries: process.env.CI ? 2 : 0,

  /* Opt out of parallel tests on CI. */
  workers: process.env.CI ? 1 : undefined,

  /* Reporter to use. See https://playwright.dev/docs/test-reporters */
  reporter: [['line'], ['html', { open: 'never' }], [\\"@replayio/playwright/reporter\\", {
    apiKey: process.env.REPLAY_API_KEY,
    upload: true
  }]],

  /* Shared settings for all the projects below. See https://playwright.dev/docs/api/class-testoptions. */
  use: {
    trace: 'on-first-retry'
  },

  /* Configure projects for major browsers */
  projects: [{
    name: 'chromium',
    use: { ...devices['Desktop Chrome'] }
  }, {
    name: \\"replay-chromium\\",

    use: {
      ...replayDevices[\\"Replay Chromium\\"]
    }
  }],

  /* Run your local dev server before starting the tests */
  webServer: {
    command: 'yarn dev',
    url: 'http://127.0.0.1:3000',
    reuseExistingServer: !process.env.CI
  }
});
"
`;

exports[`setupReplayConfig should add Replay configurations correctly for ES module syntax 1`] = `
"
import { defineConfig, devices } from '@playwright/test'

import { devices as replayDevices } from '@replayio/playwright';

export default defineConfig({
  testDir: './tests',

  /* Run tests in files in parallel */
  fullyParallel: true,

  /* Fail the build on CI if you accidentally left test.only in the source code. */
  forbidOnly: !!process.env.CI,

  /* Retry on CI only */
  retries: process.env.CI ? 2 : 0,

  /* Opt out of parallel tests on CI. */
  workers: process.env.CI ? 1 : undefined,

  /* Reporter to use. See https://playwright.dev/docs/test-reporters */
  reporter: [['line'], ['html', { open: 'never' }], [\\"@replayio/playwright/reporter\\", {
    apiKey: process.env.REPLAY_API_KEY,
    upload: true
  }]],

  /* Shared settings for all the projects below. See https://playwright.dev/docs/api/class-testoptions. */
  use: {
    trace: 'on-first-retry'
  },

  /* Configure projects for major browsers */
  projects: [{
    name: 'chromium',
    use: { ...devices['Desktop Chrome'] }
  }, {
    name: \\"replay-chromium\\",

    use: {
      ...replayDevices[\\"Replay Chromium\\"]
    }
  }],

  /* Run your local dev server before starting the tests */
  webServer: {
    command: 'yarn dev',
    url: 'http://127.0.0.1:3000',
    reuseExistingServer: !process.env.CI
  }
})
"
`;
